<resources>
    <string name="app_name">sumin_exam</string>
    <string name="WantButton">원하시는 버튼을 클릭하세요.</string>
    <string name="intro_skhu">성공회대학교 소개</string>
    <string name="intro_sowl">S.Owl 동아리 소개</string>
    <string name="intro_nutee">Nutee 동아리 소개</string>
    <string name="intro_home">홈으로</string>
    <string name="message_nutee">우리 학교 커뮤니티 활성화에 관심이 있다면
        \n누구나 지원하실 수 있으며, 동아리 내에서
        \n개발 및 디자인 스터디가 진행되고 있으니
        \n현재 실력이 부족하더라도 스터디를 통해
        \n실력을 기르실 수 있습니다.
        \n많은 관심 부탁드립니다.</string>
    <string name="message_sowl"></string>
    <string name="message_skhu">성공회대의 교육이념은 열림, 나눔, 섬김 입니다.</string>
    <string name="nutee_shortcut">Nutee site 바로가기</string>
    <string name="sowl_shortcut">Sowl site 바로가기</string>
    <string name="skhu_shortcut">Skhu site 바로가기</string>
    <string name="home_message">여기는 홈화면 입니다.
        \n
    </string>
</resources>